# InfiniCube

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  environment.yaml  pyproject.toml
README/: data_process.md  env.md  inference.md  training.md  visualize.md
infinicube/: __init__.py
infinicube/assets/: car.ply
infinicube/assets/waymo_split/: all_w_dynamic_w_ego_motion_gt_30m.json  good_map_and_motion_alignment.json  official_train_static_scene.json  official_train_w_dynamic_w_ego_motion_gt_30m_good_voxel.json  official_val_static_scene.json  official_val_w_dynamic_w_ego_motion_gt_30m_good_voxel.json  video_training_good.json
infinicube/camera/: __init__.py  base.py  pinhole.py
infinicube/data_process/: download_waymo.sh  generate_additional_attributes.py  generate_caption.py  generate_metadata_csv.py  utils.py  waymo2webdataset.py  waymo_utils.py
infinicube/inference/: feedforward_reconstruction.py  guidance_buffer_generation.py  scene_gaussian_generation.py  voxel_generation_single_chunk.py  voxel_vae.py  voxel_world_generation.py
infinicube/utils/: bbox_utils.py  buffer_utils.py  depth_utils.py  dtype_utils.py  fileio_utils.py  fvdb_test.py  fvdb_utils.py  gaussian_io_utils.py  gaussian_render_utils.py  instance_utils.py  interpolate_utils.py  mesh_utils.py  record_utils.py  semantic_utils.py  sky_utils.py  viser_gui_utils.py  wds_utils.py
infinicube/videogen/: __init__.py  download_checkpoint.py  inference.py  test_api.py
infinicube/visualize/: utils.py  visualize_dynamic_gaussians.py  visualize_grid.py  visualize_grid_compare.py  webdataset_data.py
infinicube/voxelgen/: train.py
infinicube/voxelgen/configs/: dataset.yaml  diffusion_64x64x64_dense_vs02_map_cond.yaml  gsm_vs02_res512_view1_dual_branch_sky_mlp_modulator.yaml  gsm_vs02_res512_view1_pixel_branch_only_sky_mlp_modulator.yaml  gsm_vs02_res512_view1_voxel_branch_only_sky_panorama.yaml  vae_64x64x64_height_down2_vs02_dense_residual.yaml
infinicube/voxelgen/data/: __init__.py  base.py  waymo_wds.py  waymo_wds_test.py
infinicube/voxelgen/ext/: __init__.py
infinicube/voxelgen/models/: autoencoder.py  base_model.py  diffusion.py  gsm.py
infinicube/voxelgen/modules/: basic_modules.py
infinicube/voxelgen/modules/autoencoding/: base_encoder.py  hparams.py  sunet.py
infinicube/voxelgen/modules/diffusionmodules/: ema.py  sdedit.py
infinicube/voxelgen/modules/encoders/: __init__.py  modules.py  (+5 more)
infinicube/voxelgen/utils/: box_util.py  color_util.py  common_util.py  embedder_util.py  exp.py  extrap_util.py  loss_util.py  model_merge_util.py  render_util.py  voxel_util.py  wandb_util.py
(+38 files in other folders)
